--- a/NotesTaking/NotesTaking.csproj
+++ b/NotesTaking/NotesTaking.csproj
@@ -8,4 +8,12 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Core\" />
+    <Folder Include="MVVM\Model\" />
+    <Folder Include="MVVM\ViewModel\" />
+    <Folder Include="MVVM\View\" />
+    <Folder Include="Themes\" />
+  </ItemGroup>
+
 </Project>
