Done the partial connection to the database, login is now functionable

--- a/NotesTaking/NotesTaking.csproj
+++ b/NotesTaking/NotesTaking.csproj
@@ -16,4 +16,8 @@
     <Folder Include="Themes\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MySql.Data" Version="8.4.0" />
+  </ItemGroup>
+
 </Project>
